code cleaning and refactoring

--- a/Q2 & Q3.ipynb
+++ b/Q2 & Q3.ipynb
@@ -21,33 +21,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
-   "id": "c8be63ce",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def relu(x):\n",
-    "    return np.maximum(0,x)\n",
-    "\n",
-    "def reluPrime(x):\n",
-    "    return 1*(x>0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 213,
-   "id": "6e9a519f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def pre_process(x):\n",
-    "    x=x.reshape(-1,784)\n",
-    "    x=x/255\n",
-    "    return x"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 214,
    "id": "f69412cb",
    "metadata": {},
@@ -70,6 +43,20 @@
     "            return sigmoid(x)*(1-sigmoid(x))\n",
     "        elif self.function=='tanh':\n",
     "            return (1 - (np.tanh(x)**2))         "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 212,
+   "id": "c8be63ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def relu(x):\n",
+    "    return np.maximum(0,x)\n",
+    "\n",
+    "def reluPrime(x):\n",
+    "    return 1*(x>0)"
    ]
   },
   {
@@ -129,18 +116,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
-   "id": "7f4c1ebf",
+   "execution_count": 213,
+   "id": "6e9a519f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#   for i in range(len(obj.layers)):\n",
-    "#                 if obj.prev_gradients_w!=None:\n",
-    "#                     self.weights[i]=\n",
-    "#                 if obj.prev_gradients_w!=None:\n",
-    "#                     new_gradients[i]=(1-momentum)*obj.gradients_w[i]+obj.prev_gradients_w[i]*momentum\n",
-    "#                 else:\n",
-    "#                     new_gradients[i]=lr*obj.gradients_w[i]"
+    "def pre_process(x):\n",
+    "    x=x.reshape(-1,784)\n",
+    "    x=x/255\n",
+    "    return x"
    ]
   },
   {
@@ -204,63 +188,24 @@
    "source": [
     "def soft_max(x):\n",
     "    return np.exp(x)/np.sum(np.exp(x),axis=0)\n",
-    "#     min_=np.min(x,axis=0)\n",
-    "#     max_=np.max(x,axis=0)\n",
     "\n",
-    "    x=x-max_\n",
-    "    \n",
-    "#     x=(x-min_)/(max_-min_)\n",
-    "    return np.exp(x)/np.sum(np.exp(x),axis=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 279,
-   "id": "f374351c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def soft_max_prime(x):\n",
     "    return soft_max(x)*(1-soft_max(x))\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 280,
-   "id": "663c1a30",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    \n",
+    "\n",
     "class OneHotEncoder:\n",
     "    def __init__(self,max_):\n",
     "        self.max_=max_\n",
     "    def transform(self,x):\n",
     "        out=np.zeros((len(x),self.max_))\n",
     "        out[np.arange(len(x)),x]=1\n",
-    "        return out.T"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 281,
-   "id": "a6cd0af1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "        return out.T\n",
+    "\n",
     "def cross_entropy_loss(y_pre,y):\n",
     "#     y_pre[y_pre<1e-15]=1e-15\n",
     "    loss=-np.sum(y*np.log(y_pre))\n",
-    "    return loss/float(y_pre.shape[1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 282,
-   "id": "c36647bb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return loss/float(y_pre.shape[1])\n",
+    "\n",
     "def getSig():\n",
     "    return lambda x:1.0/(1+np.exp(-x))"
    ]
