--- a/FMNIST_Entropy_VS_MSE.ipynb
+++ b/FMNIST_Entropy_VS_MSE.ipynb
@@ -70,8 +70,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Create sweep with ID: bgybm3qt\n",
-      "Sweep URL: https://wandb.ai/cs22m080/temp/sweeps/bgybm3qt\n"
+      "Create sweep with ID: 43rvobw4\n",
+      "Sweep URL: https://wandb.ai/cs22m080/temp/sweeps/43rvobw4\n"
      ]
     }
    ],
@@ -94,7 +94,7 @@
     "            'values':[64]\n",
     "        },\n",
     "        'weight_decay':{\n",
-    "            'values':[0]\n",
+    "            'values':[0.0005]\n",
     "        },\n",
     "         'learning_rate':{\n",
     "            'values':[0.0001]\n",
@@ -132,7 +132,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[34m\u001b[1mwandb\u001b[0m: Agent Starting Run: dlg0r2qo with config:\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: Agent Starting Run: ll2hvidb with config:\n",
       "\u001b[34m\u001b[1mwandb\u001b[0m: \tactivation: tanh\n",
       "\u001b[34m\u001b[1mwandb\u001b[0m: \tbatch_size: 16\n",
       "\u001b[34m\u001b[1mwandb\u001b[0m: \tepochs: 10\n",
@@ -141,7 +141,7 @@
       "\u001b[34m\u001b[1mwandb\u001b[0m: \tloss: cross_entropy\n",
       "\u001b[34m\u001b[1mwandb\u001b[0m: \tnum_layers: 3\n",
       "\u001b[34m\u001b[1mwandb\u001b[0m: \toptimizer: nadam\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m: \tweight_decay: 0\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: \tweight_decay: 0.0005\n",
       "\u001b[34m\u001b[1mwandb\u001b[0m: \tweight_init: xavier\n",
       "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mcs22m080\u001b[0m. Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n"
      ]
@@ -174,7 +174,7 @@
     {
      "data": {
       "text/html": [
-       "Run data is saved locally in <code>/Users/sathish/Desktop/DL_assign/DL_Assignment_1/wandb/run-20230319_044553-dlg0r2qo</code>"
+       "Run data is saved locally in <code>/Users/sathish/Desktop/DL_assign/DL_Assignment_1/wandb/run-20230319_214012-ll2hvidb</code>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -186,7 +186,7 @@
     {
      "data": {
       "text/html": [
-       "Syncing run <strong><a href='https://wandb.ai/cs22m080/temp/runs/dlg0r2qo' target=\"_blank\">rare-sweep-1</a></strong> to <a href='https://wandb.ai/cs22m080/temp' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>Sweep page: <a href='https://wandb.ai/cs22m080/temp/sweeps/bgybm3qt' target=\"_blank\">https://wandb.ai/cs22m080/temp/sweeps/bgybm3qt</a>"
+       "Syncing run <strong><a href='https://wandb.ai/cs22m080/temp/runs/ll2hvidb' target=\"_blank\">charmed-sweep-1</a></strong> to <a href='https://wandb.ai/cs22m080/temp' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>Sweep page: <a href='https://wandb.ai/cs22m080/temp/sweeps/43rvobw4' target=\"_blank\">https://wandb.ai/cs22m080/temp/sweeps/43rvobw4</a>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -210,7 +210,7 @@
     {
      "data": {
       "text/html": [
-       " View sweep at <a href='https://wandb.ai/cs22m080/temp/sweeps/bgybm3qt' target=\"_blank\">https://wandb.ai/cs22m080/temp/sweeps/bgybm3qt</a>"
+       " View sweep at <a href='https://wandb.ai/cs22m080/temp/sweeps/43rvobw4' target=\"_blank\">https://wandb.ai/cs22m080/temp/sweeps/43rvobw4</a>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -222,7 +222,7 @@
     {
      "data": {
       "text/html": [
-       " View run at <a href='https://wandb.ai/cs22m080/temp/runs/dlg0r2qo' target=\"_blank\">https://wandb.ai/cs22m080/temp/runs/dlg0r2qo</a>"
+       " View run at <a href='https://wandb.ai/cs22m080/temp/runs/ll2hvidb' target=\"_blank\">https://wandb.ai/cs22m080/temp/runs/ll2hvidb</a>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -235,16 +235,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch 1 : train loss = 0.60 valid loss = 0.43 train accuracy = 85.11 valid accuracy = 84.40\n",
-      "epoch 2 : train loss = 0.40 valid loss = 0.39 train accuracy = 86.86 valid accuracy = 85.62\n",
-      "epoch 3 : train loss = 0.36 valid loss = 0.37 train accuracy = 87.85 valid accuracy = 86.45\n",
-      "epoch 4 : train loss = 0.34 valid loss = 0.36 train accuracy = 88.51 valid accuracy = 87.15\n",
-      "epoch 5 : train loss = 0.32 valid loss = 0.35 train accuracy = 88.96 valid accuracy = 87.43\n",
-      "epoch 6 : train loss = 0.31 valid loss = 0.34 train accuracy = 89.28 valid accuracy = 87.62\n",
-      "epoch 7 : train loss = 0.30 valid loss = 0.34 train accuracy = 89.66 valid accuracy = 87.82\n",
-      "epoch 8 : train loss = 0.29 valid loss = 0.34 train accuracy = 90.06 valid accuracy = 87.97\n",
-      "epoch 9 : train loss = 0.28 valid loss = 0.33 train accuracy = 90.40 valid accuracy = 88.08\n",
-      "epoch 10 : train loss = 0.27 valid loss = 0.33 train accuracy = 90.74 valid accuracy = 88.23\n"
+      "epoch 1 : train loss = 0.59 valid loss = 0.43 train accuracy = 84.81 valid accuracy = 84.33\n",
+      "epoch 2 : train loss = 0.40 valid loss = 0.39 train accuracy = 86.61 valid accuracy = 85.82\n",
+      "epoch 3 : train loss = 0.36 valid loss = 0.37 train accuracy = 87.66 valid accuracy = 86.47\n",
+      "epoch 4 : train loss = 0.34 valid loss = 0.35 train accuracy = 88.40 valid accuracy = 87.17\n",
+      "epoch 5 : train loss = 0.33 valid loss = 0.35 train accuracy = 88.96 valid accuracy = 87.48\n",
+      "epoch 6 : train loss = 0.31 valid loss = 0.34 train accuracy = 89.36 valid accuracy = 87.70\n",
+      "epoch 7 : train loss = 0.30 valid loss = 0.34 train accuracy = 89.73 valid accuracy = 87.93\n",
+      "epoch 8 : train loss = 0.29 valid loss = 0.33 train accuracy = 90.07 valid accuracy = 88.12\n",
+      "epoch 9 : train loss = 0.28 valid loss = 0.33 train accuracy = 90.35 valid accuracy = 88.38\n",
+      "epoch 10 : train loss = 0.27 valid loss = 0.32 train accuracy = 90.65 valid accuracy = 88.47\n"
      ]
     },
     {
@@ -262,12 +262,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2648b32d662d4d1d8c217c740be52102",
+       "model_id": "d499af13a6e64c24b5578fa5ec1c4cbb",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(Label(value='0.001 MB of 0.001 MB uploaded (0.000 MB deduped)\\r'), FloatProgress(value=1.0, max…"
+       "VBox(children=(Label(value='0.001 MB of 0.010 MB uploaded (0.000 MB deduped)\\r'), FloatProgress(value=0.107306…"
       ]
      },
      "metadata": {},
@@ -281,7 +281,7 @@
        "    .wandb-row { display: flex; flex-direction: row; flex-wrap: wrap; justify-content: flex-start; width: 100% }\n",
        "    .wandb-col { display: flex; flex-direction: column; flex-basis: 100%; flex: 1; padding: 10px; }\n",
        "    </style>\n",
-       "<div class=\"wandb-row\"><div class=\"wandb-col\"><h3>Run history:</h3><br/><table class=\"wandb\"><tr><td>train accuracy</td><td>▁▃▄▅▆▆▇▇██</td></tr><tr><td>train loss</td><td>█▄▃▂▂▂▂▁▁▁</td></tr><tr><td>valid accuracy</td><td>▁▃▅▆▇▇▇███</td></tr><tr><td>valid loss</td><td>█▅▄▃▂▂▂▁▁▁</td></tr></table><br/></div><div class=\"wandb-col\"><h3>Run summary:</h3><br/><table class=\"wandb\"><tr><td>train accuracy</td><td>90.74259</td></tr><tr><td>train loss</td><td>0.27072</td></tr><tr><td>valid accuracy</td><td>88.23333</td></tr><tr><td>valid loss</td><td>0.33022</td></tr></table><br/></div></div>"
+       "<div class=\"wandb-row\"><div class=\"wandb-col\"><h3>Run history:</h3><br/><table class=\"wandb\"><tr><td>train accuracy</td><td>▁▃▄▅▆▆▇▇██</td></tr><tr><td>train loss</td><td>█▄▃▃▂▂▂▁▁▁</td></tr><tr><td>valid accuracy</td><td>▁▄▅▆▆▇▇▇██</td></tr><tr><td>valid loss</td><td>█▅▄▃▂▂▂▁▁▁</td></tr></table><br/></div><div class=\"wandb-col\"><h3>Run summary:</h3><br/><table class=\"wandb\"><tr><td>train accuracy</td><td>90.65</td></tr><tr><td>train loss</td><td>0.27293</td></tr><tr><td>valid accuracy</td><td>88.46667</td></tr><tr><td>valid loss</td><td>0.32497</td></tr></table><br/></div></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -293,7 +293,7 @@
     {
      "data": {
       "text/html": [
-       " View run <strong style=\"color:#cdcd00\">rare-sweep-1</strong> at: <a href='https://wandb.ai/cs22m080/temp/runs/dlg0r2qo' target=\"_blank\">https://wandb.ai/cs22m080/temp/runs/dlg0r2qo</a><br/>Synced 6 W&B file(s), 0 media file(s), 0 artifact file(s) and 0 other file(s)"
+       " View run <strong style=\"color:#cdcd00\">charmed-sweep-1</strong> at: <a href='https://wandb.ai/cs22m080/temp/runs/ll2hvidb' target=\"_blank\">https://wandb.ai/cs22m080/temp/runs/ll2hvidb</a><br/>Synced 6 W&B file(s), 0 media file(s), 0 artifact file(s) and 0 other file(s)"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -305,7 +305,7 @@
     {
      "data": {
       "text/html": [
-       "Find logs at: <code>./wandb/run-20230319_044553-dlg0r2qo/logs</code>"
+       "Find logs at: <code>./wandb/run-20230319_214012-ll2hvidb/logs</code>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -318,7 +318,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[34m\u001b[1mwandb\u001b[0m: Agent Starting Run: mjnzl1tq with config:\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: Agent Starting Run: fp3zzkl8 with config:\n",
       "\u001b[34m\u001b[1mwandb\u001b[0m: \tactivation: tanh\n",
       "\u001b[34m\u001b[1mwandb\u001b[0m: \tbatch_size: 16\n",
       "\u001b[34m\u001b[1mwandb\u001b[0m: \tepochs: 10\n",
@@ -327,7 +327,7 @@
       "\u001b[34m\u001b[1mwandb\u001b[0m: \tloss: mean_squared_error\n",
       "\u001b[34m\u001b[1mwandb\u001b[0m: \tnum_layers: 3\n",
       "\u001b[34m\u001b[1mwandb\u001b[0m: \toptimizer: nadam\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m: \tweight_decay: 0\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: \tweight_decay: 0.0005\n",
       "\u001b[34m\u001b[1mwandb\u001b[0m: \tweight_init: xavier\n"
      ]
     },
@@ -359,7 +359,7 @@
     {
      "data": {
       "text/html": [
-       "Run data is saved locally in <code>/Users/sathish/Desktop/DL_assign/DL_Assignment_1/wandb/run-20230319_044719-mjnzl1tq</code>"
+       "Run data is saved locally in <code>/Users/sathish/Desktop/DL_assign/DL_Assignment_1/wandb/run-20230319_214134-fp3zzkl8</code>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -371,7 +371,7 @@
     {
      "data": {
       "text/html": [
-       "Syncing run <strong><a href='https://wandb.ai/cs22m080/temp/runs/mjnzl1tq' target=\"_blank\">visionary-sweep-2</a></strong> to <a href='https://wandb.ai/cs22m080/temp' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>Sweep page: <a href='https://wandb.ai/cs22m080/temp/sweeps/bgybm3qt' target=\"_blank\">https://wandb.ai/cs22m080/temp/sweeps/bgybm3qt</a>"
+       "Syncing run <strong><a href='https://wandb.ai/cs22m080/temp/runs/fp3zzkl8' target=\"_blank\">devoted-sweep-2</a></strong> to <a href='https://wandb.ai/cs22m080/temp' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>Sweep page: <a href='https://wandb.ai/cs22m080/temp/sweeps/43rvobw4' target=\"_blank\">https://wandb.ai/cs22m080/temp/sweeps/43rvobw4</a>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -395,7 +395,7 @@
     {
      "data": {
       "text/html": [
-       " View sweep at <a href='https://wandb.ai/cs22m080/temp/sweeps/bgybm3qt' target=\"_blank\">https://wandb.ai/cs22m080/temp/sweeps/bgybm3qt</a>"
+       " View sweep at <a href='https://wandb.ai/cs22m080/temp/sweeps/43rvobw4' target=\"_blank\">https://wandb.ai/cs22m080/temp/sweeps/43rvobw4</a>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -407,7 +407,7 @@
     {
      "data": {
       "text/html": [
-       " View run at <a href='https://wandb.ai/cs22m080/temp/runs/mjnzl1tq' target=\"_blank\">https://wandb.ai/cs22m080/temp/runs/mjnzl1tq</a>"
+       " View run at <a href='https://wandb.ai/cs22m080/temp/runs/fp3zzkl8' target=\"_blank\">https://wandb.ai/cs22m080/temp/runs/fp3zzkl8</a>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -420,16 +420,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch 1 : train loss = 0.03 valid loss = 0.02 train accuracy = 85.30 valid accuracy = 84.50\n",
-      "epoch 2 : train loss = 0.02 valid loss = 0.02 train accuracy = 87.10 valid accuracy = 85.95\n",
-      "epoch 3 : train loss = 0.02 valid loss = 0.02 train accuracy = 88.08 valid accuracy = 86.82\n",
-      "epoch 4 : train loss = 0.02 valid loss = 0.02 train accuracy = 88.67 valid accuracy = 87.00\n",
-      "epoch 5 : train loss = 0.02 valid loss = 0.02 train accuracy = 89.29 valid accuracy = 87.22\n",
-      "epoch 6 : train loss = 0.02 valid loss = 0.02 train accuracy = 89.70 valid accuracy = 87.43\n",
-      "epoch 7 : train loss = 0.02 valid loss = 0.02 train accuracy = 90.00 valid accuracy = 87.53\n",
-      "epoch 8 : train loss = 0.02 valid loss = 0.02 train accuracy = 90.28 valid accuracy = 87.78\n",
-      "epoch 9 : train loss = 0.01 valid loss = 0.02 train accuracy = 90.61 valid accuracy = 87.90\n",
-      "epoch 10 : train loss = 0.01 valid loss = 0.02 train accuracy = 90.79 valid accuracy = 88.23\n"
+      "epoch 1 : train loss = 0.30 valid loss = 0.23 train accuracy = 85.04 valid accuracy = 84.12\n",
+      "epoch 2 : train loss = 0.21 valid loss = 0.21 train accuracy = 86.56 valid accuracy = 85.52\n",
+      "epoch 3 : train loss = 0.19 valid loss = 0.19 train accuracy = 87.64 valid accuracy = 86.20\n",
+      "epoch 4 : train loss = 0.18 valid loss = 0.19 train accuracy = 88.31 valid accuracy = 86.95\n",
+      "epoch 5 : train loss = 0.17 valid loss = 0.18 train accuracy = 88.80 valid accuracy = 87.28\n",
+      "epoch 6 : train loss = 0.17 valid loss = 0.18 train accuracy = 89.15 valid accuracy = 87.67\n",
+      "epoch 7 : train loss = 0.16 valid loss = 0.18 train accuracy = 89.50 valid accuracy = 87.77\n",
+      "epoch 8 : train loss = 0.16 valid loss = 0.18 train accuracy = 89.80 valid accuracy = 87.87\n",
+      "epoch 9 : train loss = 0.15 valid loss = 0.17 train accuracy = 90.10 valid accuracy = 87.98\n",
+      "epoch 10 : train loss = 0.15 valid loss = 0.17 train accuracy = 90.33 valid accuracy = 87.93\n"
      ]
     },
     {
@@ -446,27 +446,13 @@
     },
     {
      "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "273d6c2ab2ab4eb89eaf5adc4c83d16f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(Label(value='0.001 MB of 0.001 MB uploaded (0.000 MB deduped)\\r'), FloatProgress(value=1.0, max…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
       "text/html": [
        "<style>\n",
        "    table.wandb td:nth-child(1) { padding: 0 10px; text-align: left ; width: auto;} td:nth-child(2) {text-align: left ; width: 100%}\n",
        "    .wandb-row { display: flex; flex-direction: row; flex-wrap: wrap; justify-content: flex-start; width: 100% }\n",
        "    .wandb-col { display: flex; flex-direction: column; flex-basis: 100%; flex: 1; padding: 10px; }\n",
        "    </style>\n",
-       "<div class=\"wandb-row\"><div class=\"wandb-col\"><h3>Run history:</h3><br/><table class=\"wandb\"><tr><td>train accuracy</td><td>▁▃▅▅▆▇▇▇██</td></tr><tr><td>train loss</td><td>█▄▃▃▂▂▂▁▁▁</td></tr><tr><td>valid accuracy</td><td>▁▄▅▆▆▇▇▇▇█</td></tr><tr><td>valid loss</td><td>█▅▃▃▂▂▁▁▁▁</td></tr></table><br/></div><div class=\"wandb-col\"><h3>Run summary:</h3><br/><table class=\"wandb\"><tr><td>train accuracy</td><td>90.78519</td></tr><tr><td>train loss</td><td>0.01445</td></tr><tr><td>valid accuracy</td><td>88.23333</td></tr><tr><td>valid loss</td><td>0.01725</td></tr></table><br/></div></div>"
+       "<div class=\"wandb-row\"><div class=\"wandb-col\"><h3>Run history:</h3><br/><table class=\"wandb\"><tr><td>train accuracy</td><td>▁▃▄▅▆▆▇▇██</td></tr><tr><td>train loss</td><td>█▄▃▂▂▂▂▁▁▁</td></tr><tr><td>valid accuracy</td><td>▁▄▅▆▇▇████</td></tr><tr><td>valid loss</td><td>█▅▄▃▂▂▂▁▁▁</td></tr></table><br/></div><div class=\"wandb-col\"><h3>Run summary:</h3><br/><table class=\"wandb\"><tr><td>train accuracy</td><td>90.32778</td></tr><tr><td>train loss</td><td>0.15009</td></tr><tr><td>valid accuracy</td><td>87.93333</td></tr><tr><td>valid loss</td><td>0.17377</td></tr></table><br/></div></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -478,7 +464,7 @@
     {
      "data": {
       "text/html": [
-       " View run <strong style=\"color:#cdcd00\">visionary-sweep-2</strong> at: <a href='https://wandb.ai/cs22m080/temp/runs/mjnzl1tq' target=\"_blank\">https://wandb.ai/cs22m080/temp/runs/mjnzl1tq</a><br/>Synced 6 W&B file(s), 0 media file(s), 0 artifact file(s) and 0 other file(s)"
+       " View run <strong style=\"color:#cdcd00\">devoted-sweep-2</strong> at: <a href='https://wandb.ai/cs22m080/temp/runs/fp3zzkl8' target=\"_blank\">https://wandb.ai/cs22m080/temp/runs/fp3zzkl8</a><br/>Synced 6 W&B file(s), 0 media file(s), 0 artifact file(s) and 0 other file(s)"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -490,7 +476,7 @@
     {
      "data": {
       "text/html": [
-       "Find logs at: <code>./wandb/run-20230319_044719-mjnzl1tq/logs</code>"
+       "Find logs at: <code>./wandb/run-20230319_214134-fp3zzkl8/logs</code>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
